@@ -16,6 +16,9 @@ import com.j256.ormlite.field.SqlType;
  */
 public abstract class BaseDateType extends BaseDataType {
 
+	protected static final DateStringFormatConfig defaultDateFormatConfig = new DateStringFormatConfig(
+			"yyyy-MM-dd HH:mm:ss.SSS Z", "yyyy-MM-dd HH:mm:ss.SSSSSS");
+
 	protected BaseDateType(SqlType sqlType, Class<?>[] classes) {
 		super(sqlType, classes);
 	}
@@ -34,35 +37,13 @@ public abstract class BaseDateType extends BaseDataType {
 	}
 
 	protected static Date parseDateString(DateStringFormatConfig formatConfig, String dateStr) throws ParseException {
-		DateFormat dateFormat = formatConfig.getDateFormat();
-		return dateFormat.parse(dateStr);
+		return formatConfig.parse(dateStr);
 	}
 
 	protected static String normalizeDateString(DateStringFormatConfig formatConfig, String dateStr)
 			throws ParseException {
-		DateFormat dateFormat = formatConfig.getDateFormat();
-		Date date = dateFormat.parse(dateStr);
-		return dateFormat.format(date);
-	}
-
-	protected static class DateStringFormatConfig {
-		private final ThreadLocal<DateFormat> threadLocal = new ThreadLocal<DateFormat>() {
-			@Override
-			protected DateFormat initialValue() {
-				return new SimpleDateFormat(dateFormatStr);
-			}
-		};
-		final String dateFormatStr;
-		public DateStringFormatConfig(String dateFormatStr) {
-			this.dateFormatStr = dateFormatStr;
-		}
-		public DateFormat getDateFormat() {
-			return threadLocal.get();
-		}
-		@Override
-		public String toString() {
-			return dateFormatStr;
-		}
+		Date date = formatConfig.parse(dateStr);
+		return formatConfig.format(date);
 	}
 
 	@Override
@@ -85,5 +66,78 @@ public abstract class BaseDateType extends BaseDataType {
 	@Override
 	public boolean isValidForField(Field field) {
 		return (field.getType() == Date.class);
+	}
+
+	/**
+	 * Date string format configuration information.
+	 */
+	protected static class DateStringFormatConfig {
+		final String[] dateFormatStrings;
+		private final ThreadLocal<DateSizeFormats> threadLocal = new ThreadLocal<DateSizeFormats>() {
+			@Override
+			protected DateSizeFormats initialValue() {
+				return new DateSizeFormats(dateFormatStrings);
+			}
+		};
+		/**
+		 * Handles a number of different formats. The first one is the default. The rest are used as parsing
+		 * alternatives.
+		 */
+		public DateStringFormatConfig(String... dateFormatStrings) {
+			this.dateFormatStrings = dateFormatStrings;
+		}
+		public Date parse(String dateStr) throws ParseException {
+			return threadLocal.get().parse(dateStr);
+		}
+		public String format(Date date) {
+			return threadLocal.get().format(date);
+		}
+		@Override
+		public String toString() {
+			StringBuilder sb = new StringBuilder();
+			boolean first = true;
+			for (String format : dateFormatStrings) {
+				if (first) {
+					first = false;
+				} else {
+					sb.append(" or ");
+				}
+				sb.append(format);
+			}
+			return sb.toString();
+		}
+	}
+
+	/**
+	 * Class stored in a thread-local that holds a number of date-formats to try to parse a date-string.
+	 */
+	private static class DateSizeFormats {
+		final DateFormat[] formats;
+		/**
+		 * The first format string is considered the _default_. The rest are used as parsing alternatives.
+		 */
+		public DateSizeFormats(String[] dateFormatStrings) {
+			this.formats = new DateFormat[dateFormatStrings.length];
+			for (int i = 0; i < dateFormatStrings.length; i++) {
+				this.formats[i] = new SimpleDateFormat(dateFormatStrings[i]);
+			}
+		}
+		public Date parse(String dateString) throws ParseException {
+			ParseException parseException = null;
+			for (DateFormat format : formats) {
+				try {
+					return format.parse(dateString);
+				} catch (ParseException e) {
+					parseException = e;
+				}
+			}
+			throw parseException;
+		}
+		/**
+		 * Format a date using the default format.
+		 */
+		public String format(Date date) {
+			return formats[0].format(date);
+		}
 	}
 }
